--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,17 @@
     "atleast",
     "ballbounce",
     "calcouter",
+    "checkregistration",
     "confpassword",
     "firebaseapp",
     "firebasestorage",
     "Fishkeeping",
     "formcontainer",
     "infinitescroll",
+    "lastelm",
+    "lasttrigger",
     "mainsection",
+    "newelm",
     "phonenumber",
     "welcomepage",
     "XBFB"
