--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
     "newelm",
     "phonenumber",
     "welcomepage",
-    "XBFB"
-  ]
+    "XBFB",
+    "Yash's",
+    "yashnparekh"
+  ],
+  "liveServer.settings.port": 5502
 }
