--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "confpassword",
     "firebaseapp",
     "firebasestorage",
+    "firstcircle",
     "Fishkeeping",
     "formcontainer",
     "infinitescroll",
